Add content, style updates

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
 
-  <main id="fullpage" class="wow fadeIn">
+  <main id="fullpage" class="container wow fadeIn">
 
     <!-- Intro -->
     <section class="hero section-wrapper">
@@ -36,7 +36,7 @@
           <a href="index.html"><img src="images/layout/logo.svg" alt="Minuteman VSC logo" /></a>
         </header>
 
-        <div class="hero-content seven columns offset-by-three">
+        <div class="hero-content six columns offset-by-three">
           <h1>Don't let a vehicle breakdown cost you a fortune.</h1>
           <p>Let <strong>Minuteman VSC</strong> help get you protected in minutes.</p>
         </div>
@@ -60,6 +60,10 @@
           <p>To learn more about the VSC and payment plan providers we offer, please visit the Our Partners page.</p>
         </div>
 
+        <figure class="nine columns offset-by-three">
+          <img src="images/photos/women.jpg" alt="Women in car" />
+        </figure>
+
       </div>
     </section>
     <!-- end -->
@@ -78,6 +82,12 @@
           <p>If you have a question or claim concerning your vehicle service contract or payment plan contract, we encourage you to contact the respective provider directly.  
 
           <p>If your vehicle service contract provider or payment plan provider is not responsive to your questions, or if you have a question and y ask, feel free to reach out to us:</p>
+
+          <ul class="contact-info">
+            <li class="contact-address">Minuteman VSC <br />1776-D Princess Anne Rd <br />Virginia Beach, VA 23456</li>
+            <li class="contact-phone">866-318-0000</li>
+            <li class="contact-email"><a href="mailto:help@minutemanvsc.com">help@minutemanvsc.com</a></li>
+          </ul>
         </div>
       
       </div>
@@ -111,6 +121,10 @@
           </ul>
         </div>
 
+        <figure class="nine columns offset-by-three">
+          <img src="images/photos/puppy.png" alt="Girl and dog sitting in car" />
+        </figure>
+
       </div>
     </section>
     <!-- end -->
@@ -140,12 +154,12 @@
   <footer class="footer-wrapper">
     <div class="footer-content row">
       
-      <div class="footer-logo six columns">
+      <div class="col-left six columns">
         <a href="index.html"><img src="images/layout/logo-white.svg" alt="Minuteman VSC logo" /></a>
       </div>
 
-      <div class="contact-info six columns">
-        <p><a href="tel:866-318-0000">866-318-0000</a> <br />
+      <div class="col-right six columns">
+        <p>866-318-0000<br />
         <a href="mailto:help@minutemanvsc.com">help@minutemanvsc.com</a></p>
       </div>
 
