--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <h1>Terms of use</h1>
         </header>
 
-        <div class="section-content five columns offset-by-four wow fadeIn" data-wow-delay="0.3s" data-wow-duration="0.8s">
+        <div class="section-content five columns offset-by-four wow fadeIn" data-wow-delay="0.6s" data-wow-duration="0.8s">
           <p>Sea Pine Technologies LLC, including its successors and assigns, operating under the trade names “Service Lane VSC” and “Minuteman VSC” (hereinafter referred to as “we,” “our” and “us”), offersconsumers (hereinafter referred to as “you” and “your”) the ability, through your use of our technology platform, to receive free quotes for vehicle service contracts (“VSC” or “VSCs”) and purchase VSCs online.</p>
 
           <p><strong>IMPORTANT:</strong> We are not a party to any contract with you. This platform is intended solely for the purpose of providing quotes from VSC providers and allowing you to purchase the VSC you choose. All VSCs offered for sale through this site are underwritten by reputable third party VSC providers. The VSC provider you choose will be very apparent to you before you finalize the transaction and make your payment.</p>
@@ -185,6 +185,17 @@
         paddingBottom: '10px',
         sectionSelector: '.section-wrapper',
         lazyLoading: true,
+
+        afterLoad: function(anchorLink, index){
+          var loadedSection = $(this);
+          if(index == 1){
+            $('#fp-nav li:first-child').removeClass('show');
+            $('#fp-nav li:first-child').addClass('hide');
+          } else {
+            $('#fp-nav li:first-child').removeClass('hide');
+            $('#fp-nav li:first-child').addClass('show');
+          } 
+        }
       });
     });
   </script>
