Remove adobe logo on images

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
 
         <figure class="nine columns offset-by-three wow fadeInUp" data-wow-duration="1.2s">
-          <img src="images/photos/puppy.png" alt="Girl and dog sitting in car" />
+          <img src="images/photos/puppy.jpg" alt="Girl and dog sitting in car" />
         </figure>
 
       </div>
