fix footer on mobile

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
   <footer class="footer-wrapper">
     <div class="footer-content row">
       
-      <div class="col-left six mobile-two columns">
+      <div class="col-left six columns">
         <a href="index.html"><img src="images/layout/logo-white.svg" alt="Minuteman VSC logo" /></a>
       </div>
 
-      <div class="col-right six mobile-two columns">
+      <div class="col-right six columns">
         <p>866-318-0000<br />
         <a href="mailto:help@minutemanvsc.com">help@minutemanvsc.com</a></p>
       </div>
