--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </header>
 
         <div class="section-content six columns centered">
-          <ul class="partners-list block-grid two-up">
+          <ul class="partners-list block-grid two-up mobile-one-up">
             <li class="wow fadeIn" data-wow-delay="0.2s" data-wow-duration="0.4s">
               <h2>Vehicle Service Providers</h2>
               <a href="http://www.primeautocare.com/" target="_blank"><img src="images/partners/prime.svg" alt="Prime Autocare logo" /></a>
