content updates, add pdf

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div class="hero-content six columns offset-by-three">
           <h1>Don't let a vehicle breakdown cost you a fortune.</h1>
-          <p>Let <strong>Minuteman VSC</strong> help get you protected in minutes.</p>
+          <p>Let <strong>Minuteman VSC</strong> help you get protected in minutes&#8230; at a fraction of what dealers charge.</p>
         </div>
 
       </div>
@@ -54,7 +54,7 @@
         </header>
 
         <div class="section-content five columns offset-by-four wow fadeIn" data-wow-delay="0.3s" data-wow-duration="0.8s">
-          <p>We all know that auto insurance protects us if our vehicle suffers costly damage, but did you know that a vehicle service contract can protect us if our vehicle suffers a costly breakdown?  Minuteman VSC offers vehicle service contracts (VSCs) from top-rated providers at a fraction of the price charged at a car dealership.  We also offer you reputable payment plan providers that can allow you to purchase your VSC at 0% interest with no credit check.</p>
+          <p>You already know that auto insurance protects you if your vehicle suffers physical damage, but did you know that a vehicle service contract can protect you if your vehicle suffers a costly mechanical breakdown? Minuteman VSC offers vehicle service contracts (VSCs) from top-rated providers at a fraction of the price charged at a car dealership.  We also offer you reputable payment plan providers that can allow you to purchase your VSC at 0% interest with no credit check.</p>
         </div>
 
         <figure class="nine columns offset-by-three wow fadeInUp" data-wow-duration="1.2s">
@@ -83,7 +83,7 @@
           <ul class="contact-info">
             <li class="contact-address">Minuteman VSC <br />1776-D Princess Anne Rd <br />Virginia Beach, VA 23456</li>
             <li class="contact-phone">866-318-0000</li>
-            <li class="contact-email"><a href="mailto:help@minutemanvsc.com">help@minutemanvsc.com</a></li>
+            <li class="contact-email"><a href="mailto:info@minutemanvsc.com">info@minutemanvsc.com</a></li>
           </ul>
         </div>
       
@@ -139,7 +139,7 @@
 
           <p><strong>IMPORTANT:</strong> We are not a party to any contract with you. This platform is intended solely for the purpose of providing quotes from VSC providers and allowing you to purchase the VSC you choose. All VSCs offered for sale through this site are underwritten by reputable third party VSC providers. The VSC provider you choose will be very apparent to you before you finalize the transaction and make your payment.</p>
 
-          <a class="button" href="#">Download PDF</a>
+          <a class="button" href="docs/minuteman-terms-of-use-2017.pdf" target="_blank">Download PDF</a>
         </div>
 
       </div>
@@ -157,7 +157,7 @@
 
       <div class="col-right six columns">
         <p>866-318-0000<br />
-        <a href="mailto:help@minutemanvsc.com">help@minutemanvsc.com</a></p>
+        <a href="mailto:info@minutemanvsc.com">info@minutemanvsc.com</a></p>
       </div>
 
     </div>
