--- a/index.html
+++ b/index.html
@@ -16,10 +16,21 @@
   <script src="https://use.typekit.net/rpa2gqw.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
   <script src="https://use.fontawesome.com/1836dcd1d9.js"></script>
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
   <!-- Title -->
 	<title>Minuteman VSC</title>
+
+  <!-- Google Analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-92561346-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 
 </head>
 
