--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
         </header>
 
         <div class="section-content five columns offset-by-four wow fadeIn" data-wow-delay="0.3s" data-wow-duration="0.8s">
-          <p>Minuteman VSC is not the administrator or payment plan provider for the VSC you purchase and has no obligation with regards to your VSC.  If you hav e already used our service to purchase a VSC, you should have received your signed contracts via email that name your administrator and your payment plan provider.</p>
+          <p>Minuteman VSC is not the administrator or payment plan provider for the VSC you purchase and has no obligation with regards to your VSC.  If you have already used our service to purchase a VSC, you should have received your signed contracts via email that name your administrator and your payment plan provider.</p>
 
           <p>If you have a question or claim concerning your vehicle service contract or payment plan contract, we encourage you to contact the respective provider directly.  
 
-          <p>If your vehicle service contract provider or payment plan provider is not responsive to your questions, or if you have a question and y ask, feel free to reach out to us:</p>
+          <p>If your vehicle service contract provider or payment plan provider is not responsive to your questions, or if you have a question to ask, feel free to reach out to us:</p>
 
           <ul class="contact-info">
             <li class="contact-address">Minuteman VSC <br />1776-D Princess Anne Rd <br />Virginia Beach, VA 23456</li>
@@ -146,7 +146,7 @@
         </header>
 
         <div class="section-content five columns offset-by-four wow fadeIn" data-wow-delay="0.6s" data-wow-duration="0.8s">
-          <p>Sea Pine Technologies LLC, including its successors and assigns, operating under the trade names “Service Lane VSC” and “Minuteman VSC” (hereinafter referred to as “we,” “our” and “us”), offersconsumers (hereinafter referred to as “you” and “your”) the ability, through your use of our technology platform, to receive free quotes for vehicle service contracts (“VSC” or “VSCs”) and purchase VSCs online.</p>
+          <p>Sea Pine Technologies LLC, including its successors and assigns, operating under the trade names “Service Lane VSC” and “Minuteman VSC” (hereinafter referred to as “we,” “our” and “us”), offers consumers (hereinafter referred to as “you” and “your”) the ability, through your use of our technology platform, to receive free quotes for vehicle service contracts (“VSC” or “VSCs”) and purchase VSCs online.</p>
 
           <p><strong>IMPORTANT:</strong> We are not a party to any contract with you. This platform is intended solely for the purpose of providing quotes from VSC providers and allowing you to purchase the VSC you choose. All VSCs offered for sale through this site are underwritten by reputable third party VSC providers. The VSC provider you choose will be very apparent to you before you finalize the transaction and make your payment.</p>
 
